--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -2,13 +2,22 @@
     width: 100%;
 
     &__title{
-        font-size: 4rem;
+        /* font-size: 4rem; */
         color: #fff;
-        line-height: 36px;
-        font-weight: 700;
+        text-align:right;
+        font-family: Sofia Pro;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 60px;
+        line-height: 34px;
 
         span{
             font-weight: 100;
+            font-size: 40px;
+            letter-spacing: -3px;
+            color: #FFFFFF;
+            line-height: 50px;
+            
         }
     } 
 
@@ -106,9 +115,70 @@
     &__content{
         width: 100%;
         /* width: calc(95% - 367px); */
-        padding: 130px 0;
-        text-align: center;
-        justify-content: center;
+        padding: 70px 100px 120px 80px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        & > div:nth-child(2) {
+            display: flex;
+            flex-direction:column;
+            align-items:flex-end;
+        }
+    }
+    &__left {
+        width: 40%;
+
+        &--title {
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 30px;
+            line-height: 20px;
+            color:#ffffff;
+        }
+        & ul {
+            list-style-type: none;
+            list-style-position: inside;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            justify-content: space-between;
+            padding-top: 20px;
+
+            & li {
+                font-family: Sofia Pro;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 18px;
+                line-height:30px;
+                color:#fff;
+
+                &:nth-child(even){
+                    width: 40%;
+                    
+                }
+
+            }
+            
+            & li::before {
+                content:url(../../assets/images/arrow.png);
+                display: inline-block;
+                height: 20%;
+                vertical-align: middle;
+                margin-right: 14px;
+                
+            }
+        }
+
+    }
+    &__desc{
+        font-family: Sofia Pro;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 30px;
+        color: #fff;
     }
 
     &__lower-links{
@@ -253,10 +323,6 @@
 
 @media only screen and (max-width: 820px){
 
-    .footer__title{
-        line-height: 54px;
-        /* margin-bottom: 15px; */
-    }
     .footer__quote{
         top: -60px;
         width: 300px;
@@ -367,5 +433,116 @@
         margin-right: 0;
         display: block;
         margin-bottom: 22px;
+    }
+}
+@media only screen and (max-width: 1168px){
+    .footer {
+        &__left{
+        width: 47%;
+        &--title {
+            font-size: 26px;
+        }
+        }
+    }
+}
+@media only screen and (max-width: 1024px){
+    .footer {
+        &__content{
+            padding: 70px 40px 120px 46px;
+        }
+        &__desc {
+            font-size: 14px;
+        }
+    }
+}
+@media only screen and (max-width: 854px){
+    .footer {
+        &__left{
+            width: 60%;
+        }
+        &__title {
+            font-size: 45px;
+            &--span {
+                font-size: 33px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 768px){
+    .footer {
+        &__content{
+            padding: 70px 29px 120px 40px;
+            & > div:nth-child(2) {
+                align-items:center
+            }
+        }
+        &__title {
+            font-size: 34px;
+            text-align: center;
+            & span {
+                font-size: 29px;
+                text-align:center;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 668px){
+    .footer {
+        &__content{
+            flex-direction: column;
+            padding-bottom: 80px;
+             
+            & > div::nth-child(2){
+                padding-top:20px;
+            }
+
+        }
+        &__title {
+            line-height: 12px;
+        }
+        &__left {
+            width: 75%;
+        }
+    }
+}
+@media only screen and (max-width: 549px){
+    .footer {
+        &__content{
+            padding: 0 auto;;
+
+        }
+        &__left {
+            width: 100%;
+        }
+    }
+}
+@media only screen and (max-width: 432px){
+    .footer {
+        &__left {
+            &--title {
+            font-size: 21px;
+            }
+        & ul {
+            flex-direction: column;
+        & li{
+            font-size: 15px;
+            &:nth-child(even){
+                width: 100%;
+            }
+        }
+        }
+        }
+    }
+}
+@media only screen and (max-width: 380px){
+    .footer {
+        &__left {
+            &--title {
+            font-size: 19px;
+            }
+        }
+        &__desc {
+            font-size: 12px;
+        }
     }
 }
