--- a/app/assets/styles/modules/_team.css
+++ b/app/assets/styles/modules/_team.css
@@ -2,13 +2,200 @@
     position: relative;
     padding: 40px 0;
 
+    &.xpad {
+        padding: 40px;
+    }
 
+    &__row {
+        padding: 40px 80px;
+    }
+
+    
+
+    &__board {
+        display: flex;
+        justify-content:space-between;
+        padding: 30px 30px 30px 100px ;
+        width:100%;
+
+       
+
+        & > div:first-child {
+            width: 280px;
+            position:relative;
+        }
+        &:nth-child(first-child) {
+            width: 40%;
+        }
+
+        &:not(:nth-of-type(1))::before {
+            content: " ";
+            width: 50%;
+            height: 10px;
+            background: rgba(251, 90, 30, 0.2);
+            border-radius: 4px;
+            position: absolute;
+            margin: -40px auto;
+            transform: translateX(-25%);
+            
+            
+        }
+        &.mgt {
+            background: #FFFFFF;
+            box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding:60px 30px 40px 60px;
+            margin: 30px 0px;
+
+            &:before {
+                content: " ";
+                width: 0;
+                height: 0;
+                background: white;
+            }
+        }
+        &:nth-of-type(even) {
+            flex-direction: row-reverse;
+            padding: 30px 30px 30px 40px ;
+
+            & > div .team__links {
+                display: flex;
+                align-items:flex-end;
+                justify-content:flex-end;
+                right:20px;
+                
+                & img {
+                padding-right:0px;
+                padding-left:10px;
+                }
+            }
+
+        }
+        &.mgt:nth-of-type(even) {
+            flex-direction: row;
+            padding: 60px 30px 40px 60px;
+
+
+            & > div .team__links {
+                display: flex;
+                align-items:flex-start;
+                justify-content:flex-start;
+            }
+                
+        }
+        
+    }
+
+   
+
+    &__visual{
+        position: relative;
+        width: 140px;
+
+        &::after {
+        content: url(../../assets/images/reddot.png);
+        position:absolute;
+        bottom: -20px;
+        left:100%;
+        z-index:-20;
+        
+        }
+        & > img.team__im{
+            width: 200%;
+        }
+        
+    }
+    
+    &__ppic {
+        width: 140px;
+        position: relative;
+        z-index: 10;
+
+        & img {
+            width:200%;
+            
+        }
+
+        &::before {
+            content: url(../../assets/images/oball.png);
+            position:absolute;
+            bottom: 10px;
+            left:90%;
+            z-index:-10;
+            width: 20%
+        }
+        &::after {
+            content: url(../../assets/images/pball.png);
+            position:absolute;
+            bottom: 0px;
+            left:-20%;
+            z-index:-20;
+            width: 40%
+        }
+    }
+    &__desc {
+        padding-left: 60px;
+        position: relative;
+        width: 70%;
+
+        /* &:nth-of-type(even) {
+            flex-direction: row-reverse;
+            padding-right:60px;
+
+        } */
+        & h3 {
+        font-family: Sofia Pro;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 42px;
+        line-height: 60px;
+        letter-spacing: -0.02em;
+        color: #FB5A1E;
+        }
+        & h4 {
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 20px;
+            line-height: 30px;
+            letter-spacing: -0.02em;
+            color: #333333;
+            padding-bottom: 20px;            
+        }
+        & p {
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 20px;
+            line-height: 173.4%;
+            letter-spacing: -0.02em;
+            color: #000000;            
+            
+        }
+    }
+
+    &__links {
+        margin-top: 30px;
+
+        & img {
+            height: 20px;
+            padding-right:10px;
+        }
+    }
     &__img-bg{
         position: absolute;
         top: -10%;
         left: 0%;
         width: 60%;
         z-index: -1;
+
+        &-top {
+            position: absolute;
+            top: 90%;
+            right: 0%;
+            width: 20%;
+        z-index: -1;
+        }
     }
 
     &__item{
@@ -17,6 +204,13 @@
         position: relative;
         border-radius: 50%;
         padding-bottom: 79px;
+
+        & > div {
+            display: flex;
+            flex-direction:column;
+            align-items:center;
+            justify-content:center;
+        }
 
         span{
             font-weight: 300;
@@ -33,12 +227,15 @@
     }
 
     &__avatar-wrapper{
-        width: 100%;
-        border: 4px solid #FFFFFF;
-        height: 100%;
-        overflow: hidden;
+        width: 154%;
+        height: 280px;
         border-radius: 50%;
-        box-shadow: 0px 4px 43px rgba(0, 0, 0, 0.2);
+        display: flex;
+        justify-content: center;
+
+        & img {
+            height: 132%;
+        }
 
         img:hover{
             transform: scale(1.1);
@@ -51,10 +248,14 @@
         justify-content: space-between;
         align-items: flex-start;
         flex-wrap: wrap;
+
+        
     }
 
     .title{
-        padding-bottom: 10px;
+        padding-bottom: 20px;
+
+        
 
         &__sub{
             font-size: 1.4rem;
@@ -79,35 +280,154 @@
         }
 
         &__second{
+            font-family: Roboto;
+            font-style: normal;
             font-weight: bold;
-            font-size: 1.5rem;
-            padding: 16px;
-            line-height: 12px;
-            color: #000000;
+            font-size: 22px;
+            line-height: 240.5%;
+            letter-spacing: -0.02em;
+            color: #000000;            
         }
+        
     }
+
+    &__label {
+            white-space: nowrap;
+        & span {
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 102.5%;
+            letter-spacing: -0.02em;    
+            color: #000000;        
+        }
+    }   
+    
+}
+
+.xpad {
+    padding-left: 100px;
+    padding-bottom: 30px;
 }
 
 
+
+@media only screen and (max-width: 1193px){
+    .team {
+        &__board{
+        padding: 30px 0px 30px 50px;
+        }
+    }
+    .team__board:nth-of-type(even){
+        padding: 30px 0px 30px 0px;
+    }
+    
+}
+@media only screen and (max-width: 1024px){
+    .team__row.xpad {
+        padding:40px;
+    }
+    .team__avatar-wrapper {
+        width: 188%;
+    }
+}
+@media only screen and (max-width: 967px){
+    .team__desc p {
+        font-size: 18px;
+    }
+    .team__visual {
+        width: 134px;
+    }
+    .team__board {
+        padding-left: 0px;
+    }
+    .team__desc {
+        padding-right: 20px;
+    }
+    .team__board:nth-of-type(even) > .team__desc{
+        padding-left: 0px;
+    }
+    .team__board.mgt:nth-of-type(even) > .team__desc{
+        padding-left: 60px;
+    }
+    .team__ppic {
+        width: 124px;
+    }
+    .team__ppic::before {
+        left:70%;
+    }
+}
+@media only screen and (max-width: 840px){
+    .team__img-bg {
+        top: -6%;
+    }
+    .team__item {
+        width: 29.1%;
+    }
+    .team__avatar-wrapper {
+        width: 162%;
+    }
+    .team__item:nth-of-type(1) > div > .team__avatar-wrapper,
+    .team__item:nth-of-type(4) > div > .team__avatar-wrapper,
+    .team__item:nth-of-type(8) > div > .team__avatar-wrapper,
+    {
+        margin-left: 45px;
+    }
+}
+@media only screen and (max-width: 768px){
+    .team__board {
+        flex-direction: column;
+        align-items: center;
+    }
+    .team__desc {
+        width: 100%;
+        padding-top: 20px;
+    }
+    .team__board:nth-of-type(even) {
+        flex-direction: column;
+        align-items: center;
+    }
+    .team__board:not(:nth-of-type(1))::before {
+        transform: translateX(0px);
+    }
+    .team__board:nth-of-type(even) > .team__desc {
+        padding-left: 60px;
+    }
+    
+    .team__links {
+        text-align: right;
+    }
+    .team__board.mgt:nth-of-type(even) {
+        flex-direction: column;
+    }
+    .team__board.mgt:nth-of-type(even) > .team__desc > .team__links{
+        position: absolute;
+        top: -22px;
+        left: 43%;
+    }
+    .team__board.mgt > .team__desc > .team__links{
+        position: absolute;
+        top: -22px;
+        left: 43%;
+    }
+    .team__board.mgt > .team__desc h3{
+        padding-top: 20px;
+    }
+
+}
 @media only screen and (max-width: 740px){
     .team__item{
-        width: 40%;
+        width: 37%;
         padding-bottom: 30px;
     }
     .team__img-bg {
         display: none;
     }
     .team .title {
-        padding-bottom: 50px;
+        padding-bottom: 0px;
     }
 }
-
-@media only screen and (max-width: 840px){
-    .team__img-bg {
-        top: -6%;
-    }
-}
-
 @media only screen and (max-width: 640px){
 
     .about-page__container{
@@ -124,13 +444,79 @@
         width: 100%;
     }
 }
-
+@media only screen and (max-width: 600px){
+    .team__desc, .team__board:nth-of-type(even) > .team__desc {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .team__board.mgt:nth-of-type(even) > .team__desc {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .team__desc p {
+        font-size: 16px;
+    }
+    .team__desc h3 {
+        font-size: 33px;
+    }
+    .team__links img {
+        height: 15px;
+    }
+    
+}
+@media only screen and (max-width: 524px){
+    .team__item {
+        width: 45%;
+    }
+    
+}
+@media only screen and (max-width: 480px){
+    
+    .team__ppic{
+        width: 112px;
+    }
+    .team__ppic::before {
+        left: 54%;
+    }
+    
+}
 @media only screen and (max-width: 440px){
     .team__item{
         width: 60%;
+        padding-bottom: 0px;
     }
     .team__container__main{
         justify-content: center;
+    }
+}
+@media only screen and (max-width: 425px){
+    
+    .team__visual{
+        width: 111px;
+    }
+    .team__visual::after{
+        left: 68%;
+    }
+    .team__board > div:first-child {
+        width: 228px;
+    }
+    .team__desc h3 {
+        font-size: 26px;
+    }
+    .xpad {
+        padding-left: 50px;
+        padding-bottom: 9px;
+    }
+    .team__avatar-wrapper {
+        width: 200%;
+    }
+}
+@media only screen and (max-width: 350px){
+    .team__board.mgt,.team__board.mgt:nth-of-type(even) {
+        padding-left: 34px;
+    }
+    .team__item {
+        width: 66%;
     }
 }
 
