--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -29,3 +29,5 @@
 @import 'modules/_case.css';
 @import 'modules/_case-full.css';
 @import 'modules/_ch.css';
+@import 'modules/_who.css';
+@import 'modules/_diff.css';
