--- a/app/assets/styles/modules/_team.css
+++ b/app/assets/styles/modules/_team.css
@@ -313,6 +313,16 @@
 
 
 
+@media only screen and (min-width: 1400px){
+    .footer__left ul li:nth-child(even) {
+        width: 43%;
+    }
+}
+@media only screen and (min-width: 1500px){
+    .footer__left ul li:nth-child(even) {
+        width: 48%;
+    }
+}
 @media only screen and (max-width: 1193px){
     .team {
         &__board{
