--- a/app/assets/styles/modules/_who.css
+++ b/app/assets/styles/modules/_who.css
@@ -4,6 +4,13 @@
         padding: 60px 80px;
        
     }
+    
+    &__dot {
+        position: absolute;
+        left: 0;
+        height: 60%;
+        transform: translateY(-70px);
+    }
     &__hero {
         width: 76%;
 
@@ -45,8 +52,9 @@
             position: absolute;
             top: 106%;
             right: 0%;
-            width: 20%;
-            z-index: -20;            
+            width: 28%;
+            z-index: -20;
+            height:54%            
         }
     }
     &__card {
@@ -264,13 +272,27 @@
 .outCircle {
     width:251px;
     height: 260px;
-    background-color:rgb(13, 11, 145);
+    background-color:#fff;
     position: absolute;
-    top: 108%;
-    right: 0%;
+    top: 110%;
+    right: 4%;
     -moz-border-radius: 150px;
     -webkit-border-radius: 100px;
     border-radius: 150px;
+
+    & p {
+        font-family: Sofia Pro;
+font-style: normal;
+font-weight: normal;
+font-size: 22px;
+line-height: 47px;
+text-align: center;
+color: #504D4D;
+display:inline-block;
+position:absolute;
+padding:20px
+
+    }
   }
   .rotate {
     width: 100%;
@@ -286,13 +308,17 @@
     &:nth-of-type(odd) > .inner {
         
         box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.12);
-        background:#FB5A1E
+        background:#FB5A1E;
+        
+        & h3 {
+            color: #Fff;
+        }
     }
 
   }
   .inner {
-    width: 100px;
-    height: 100px;
+    width: 102px;
+    height:102px;
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
     border-radius: 100px;
@@ -304,10 +330,20 @@
     justify-content: center;
     line-height: 100px;
     text-align: center;
-    display: block;
+    /* display: block; */
     z-index: 20;
     background: #FFFFFF;
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.12);
+
+    & h3 {
+        font-family: Sofia Pro;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 28px;
+        text-align: center;
+        color: #FB5A1E;;        
+    }
 
 
   }
