--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -32,3 +32,5 @@
 @import 'modules/_who.css';
 @import 'modules/_diff.css';
 @import 'modules/_solutions.css';
+@import 'modules/_glide.css';
+@import 'modules/_gallery.css';
