--- a/app/assets/styles/modules/_work.css
+++ b/app/assets/styles/modules/_work.css
@@ -1,6 +1,6 @@
 .work{
     position: relative;
-    background: #FFF7F5;
+    /* background: #FFF7F5; */
     
     &__bg{
         position: absolute;
@@ -12,22 +12,103 @@
 
     &__container{
         padding: 32px 0;
-    }
 
-    &__title{
-        font-size: 2.9rem;
-        font-weight: 700;
-        color: #333333;
+        & p {
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 36px;
+            color: #333333; 
+            width:65%;
+                 
+        }
 
-        &::after{
-            content: "";
-            display: inline-block;
-            width: 7%;
-            height: 5px;
-            background: #333333;
+        &__container{
+            z-index:-2
         }
     }
 
+    &__title{
+        font-family: Sofia Pro;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 45px;
+        line-height: 70px;
+        color: #FB5A1E;        
+
+
+    }
+
+    &__board {
+        display: flex;
+        padding: 20px 30px 40px 80px;
+        margin-bottom: 60px;
+        
+        &:nth-of-type(even){
+            padding: 80px 30px 40px 100px;
+
+        }
+
+        &--bg {
+            background: #FFF7F5;
+            width:100%;
+            height: 100%;
+            z-index:-2;
+            transform:translateY(1px)
+        }
+
+        & img.work__base {
+            position: absolute;
+            z-index:-1;
+            height:89%;
+        }
+        &:nth-of-type(odd) img.work__base {
+            
+            transform:translateY(-200px)
+            
+        }
+        &:nth-of-type(even) img.work__base {
+            
+            transform:translateY(-130px);
+            height: 112%;
+            
+        }
+        &:nth-of-type(odd) .work__desc {
+           order: -1;
+        
+        }
+        &:nth-of-type(odd) img.work__base {
+           right: 0;
+        
+        }
+        &:nth-of-type(even) img.work__base {
+           left: 0;
+         
+        
+        }
+        &:nth-of-type(even) .work__desc p{
+            padding-right: 20px;
+        
+        }
+    }
+
+    &__visual {
+        /* width: 800px; */
+        height: 500px;
+    
+        
+        & img {
+            height: 90%;
+           
+        }
+    }
+
+    &__desc {
+        & p {
+            width: 100%;
+        }
+    }
     &__contents{
         display: flex;
         justify-content: space-between;
