--- a/app/assets/styles/modules/_testimonials.css
+++ b/app/assets/styles/modules/_testimonials.css
@@ -56,7 +56,7 @@
     &__title{
         position: absolute;
         top: 8px;
-        left: 45px;
+        left: 73px;
     }
 
     &__body{
@@ -96,8 +96,8 @@
             }
 
             &--adjusted{
-                padding-left: 0%;
-                padding-top: 36px;
+                padding-left: 8%;
+                padding-top: 12px;
             }
         }
     }
@@ -108,15 +108,16 @@
         align-items: center;
         flex-direction: column;
         margin-top: 5%;
+        padding-top: 60px;
     }
 
     .quote{
-        width: 9%;
+        width: 13%;
     }
 
     &__container-first{
         padding: 154px 0;
-        background: linear-gradient(327.75deg, #FB5A1E 3.02%, rgba(186, 149, 82, 0.75) 99.31%), url(../../assets/images/pic.png);
+        background:url(../../assets/images/pic.png);
         width: 0%;
         background-position: center;
         background-size: cover;
@@ -142,7 +143,7 @@
     }
 
     &__pic{
-        width: 65%;
+        width: 71%;
         box-shadow: 0px 4px 48px rgba(0, 0, 0, 0.49);
         border-radius: 28px;
         transform: translateX(50%);
@@ -172,7 +173,7 @@
     }
     .testimonials__body{
         margin-right: 15%;
-        margin-left: 8%;
+        margin-left: 13%;
     }
     .testimonials__content{
         display: block;
