--- a/app/assets/styles/modules/_who.css
+++ b/app/assets/styles/modules/_who.css
@@ -1,7 +1,7 @@
 .who {
     
     &__row {
-        padding: 60px 80px;
+        padding: 60px 100px;
        
     }
     
@@ -12,22 +12,22 @@
         transform: translateY(-70px);
     }
     &__hero {
-        width: 76%;
+        width: 66%;
 
         & h2 {
             font-family: Sofia Pro;
             font-style: normal;
-            font-weight: 600;
-            font-size: 22px;
-            line-height: 40px;
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 30px;
             color: #504D4D;
         }
         & p {
             font-family: Sofia Pro;
             font-style: normal;
             font-weight: normal;
-            font-size: 18px;
-            line-height: 36px;
+            font-size: 16px;
+            line-height: 30px;
             color: #333333;
             display: block;
             padding-top: 20px;
@@ -38,10 +38,11 @@
     }
     &__container{
         width: 100%;
-        padding: 30px;
+        padding: 10px 40px;
+       
         
         &--main {
-            padding: 50px 0px;
+            padding-top: 50px;
             
         }
     
@@ -52,23 +53,26 @@
             position: absolute;
             top: 106%;
             right: 0%;
-            width: 28%;
+            /* width: 28%; */
             z-index: -20;
-            height:54%            
+            height:67%            
         }
+    }
+    &__bar {
+        width: 28%;
     }
     &__card {
         width: 60%;
         display: flex;
         flex-wrap: wrap;
         /* align-items: flex-start; */
-        padding: 30px 20px;
+        padding: 10px 20px 160px;
         /* justify-content: space-around; */
         
 
         & > div {
-            width:26%;
-            padding:20px 50px;
+            width:20%;
+            padding:17px 26px;
             display: flex;
             flex-direction:column;
             align-items:center;
@@ -85,8 +89,8 @@
                 font-family: Sofia Pro;
                 font-style: normal;
                 font-weight: normal;
-                font-size: 18px;
-                line-height: 26px;
+                font-size: 16px;
+                line-height: 20px;
                 text-align: center;                
                 color: #FB5A1E;  
                 
@@ -106,10 +110,11 @@
     &__desc {
         font-family: Sofia Pro;
         font-style: normal;
-        font-weight: normal;
-        font-size: 34px;
-        line-height: 60px;
-        color: #605E5E;        
+        font-weight: 500;
+        font-size: 28px;
+        line-height: 40px;
+        color: #605E5E;  
+        padding-left: 20px;      
     }
     &__center {
         transform: translateY(50%);
@@ -155,8 +160,18 @@
     &__text{
         background: rgba(251, 90, 30, 0.9);
         border-radius: 10px;
-        padding: 50px 90px 60px 140px;
+        padding: 30px 90px 60px 140px;
         text-align: left;
+        color: #FFFFFF;
+        & h5 {
+            font-family: Sofia Pro;
+            font-style: italic;
+            font-weight: bold;
+            font-size: 20px;
+            line-height: 3;
+            text-align: center;           
+        }
+
         & h3 {
             font-family: Sofia Pro;
             font-style: normal;
@@ -164,7 +179,7 @@
             font-size: 28px;
             line-height: 60px;
             color: #FFFFFF; 
-    
+        
             
             &:nth-of-type(1)::before {
                 content: "";
@@ -206,13 +221,14 @@
         &--container {
             display: flex;
             align-items:center;
-            padding:0px 70px 100px 0px;
+            padding:0px 70px 120px 0px;
         }
     }
     &__hleft {
         order: -1;
-        padding-right: 70px;
+        padding:0px 70px 0px 36px;
         position: relative;
+
        
         & h3 {
             font-family: Playfair Display;
@@ -238,7 +254,7 @@
             font-family: Sofia Pro;
             font-style: normal;
             font-weight: 300;
-            font-size: 18px;
+            font-size: 16px;
             line-height: 32px;
             color: #333333;            
         }
@@ -258,108 +274,415 @@
         }        
         
     }
+    &__circler {
+        
+        position: absolute;
+        /* height: 35%; */
+        z-index: 20;
+        right: 0px;
+        width: 100%; 
+        /* border: 34px solid #EAE7E7;   */
+        width: 430px; 
+        height: 500px; 
+        border-radius: 50%; 
+        display: flex;
+        align-items: center; 
+        padding: 0px 30px 0px 100px;
+        transform: translateY(-50%);
+        
+        &--bg {
+            position: absolute;
+        /* height: 35%; */
+        z-index: 20;
+        right: 0px;
+        width: 430px; 
+        height: 500px; 
+        display: flex;
+        align-items: center; 
+        
+        transform: translateY(-50%);
+    
+        }
+
+
+        & p {
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 36px;
+            text-align: center;
+            
+            color: #504D4D;            
+        }
+    }
     &__circle {
+         
+        position: absolute;
+        width: 114px;
+        height:114px;
+        -moz-border-radius: 50px;
+        -webkit-border-radius: 50px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        z-index: 20;
+        background: #FFFFFF;
+        box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.12);
+        padding: 15px;
+        z-index: 50;
+
+
+
+        &:nth-of-type(1) {
+            right: 20%;
+            top:-8%
+        }
+        &:nth-of-type(2) {
+            right: 63%;
+            top: 0%;
+        }
+        &:nth-of-type(3) {
+            right: 86%;
+            top: 36%;
+        }
+        &:nth-of-type(4) {
+            right: 63%;
+            top:74%
+        }
+        &:nth-of-type(5) {
+            right: 20%;
+            top:86%
+        }
+        &:nth-of-type(odd) {
+            background: #FB5A1E;
+            color: white;
+        }
+        &:nth-of-type(even) {
+            color: #FB5A1E;
+        }
+        
+
         &--bg {
             position: absolute;
             left:-10%;
-            top:-150px;
-            height:600px;
+            top:-165px;
+            height:630px;
             z-index: -10;
         }
     }
 }
 
-.outCircle {
-    width:251px;
-    height: 260px;
-    background-color:#fff;
-    position: absolute;
-    top: 110%;
-    right: 4%;
-    -moz-border-radius: 150px;
-    -webkit-border-radius: 100px;
-    border-radius: 150px;
 
-    & p {
-        font-family: Sofia Pro;
-font-style: normal;
-font-weight: normal;
-font-size: 22px;
-line-height: 47px;
-text-align: center;
-color: #504D4D;
-display:inline-block;
-position:absolute;
-padding:20px
 
+@media only screen and (max-width:1200px){
+    .who__row {
+        padding-left: 40px;
     }
-  }
-  .rotate {
-    width: 100%;
-    height: 100%;
-    z-index: 20;
-  }
-  .counterrotate {
-    width: 232px;
-    height: 50px;
-    -webkit-animation: ccircle 20s infinite ;
-    z-index: 20;
-
-    &:nth-of-type(odd) > .inner {
-        
-        box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.12);
-        background:#FB5A1E;
-        
-        & h3 {
-            color: #Fff;
+    .who__circler{
+        width: 386px;
+        &--bg {
+            width: 386px;
         }
     }
+    .who__text{
+        padding: 30px 25px 60px 110px;
+    }
+    .who__visual img {
+        transform: translate(-8%,-23%)
+    }
+}
+@media only screen and (max-width:1120px){
+    .who__card > div{
+        width: 23%;
+    }
+    .who__visual{
+        width: 354px;
+    }
+    .who__visual img {
+        height: 516px;
+    }
+    .who__text{
+        padding-left: 105px;
+    }
+    .who__hleft {
+        padding: 0px 30px 0px 20px;
+    }
+    .who__text p {
+        line-height: 25px;
+    }
 
-  }
-  .inner {
-    width: 102px;
-    height:102px;
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
-    border-radius: 100px;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 100px;
-    text-align: center;
-    /* display: block; */
-    z-index: 20;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.12);
-
-    & h3 {
-        font-family: Sofia Pro;
-        font-style: normal;
-        font-weight: 600;
+}
+@media only screen and (max-width:1000px){
+    .who__visual{
+        width: 230px;
+    }
+    .who__staff img {
+        transform: scale(1.0);
+        height: 310px;
+    }
+    .who__history--container {
+        padding-right: 40px;
+       
+    }
+    .who__container {
+        padding-left: 10px;
+        
+    }
+    .who__circle--bg {
+        top: -126px;
+    }
+    .who__text  {
+        line-height: 21px;
+        font-size: 15px;
+    }
+    .who__visual img {
+        width: 400px;
+    }
+    .who__text h3{
+        font-size: 23px;
+    }
+    .who__text h5 {
         font-size: 18px;
-        line-height: 28px;
-        text-align: center;
-        color: #FB5A1E;;        
     }
+    .who__circler{
+        width: 328px;
+        height: 405px;
+    }
+    .who__circle{
+        width: 87px;
+        height: 87px;
+    }
+    .who__circler--bg{
+        width: 328px;
+        height: 405px;
+    }
+    .who__circler p {
+        font-size: 16px;
+    }
+    .who__desc {
+        font-size: 22px;
+    }
+    .who__card {
+        width: 72%;
+    }
+}
 
+@media only screen and (max-width:820px){
+    .who__card{
+        width: 68%;
+    }
+    .who__card > div {
+        width: 28%;
+        padding: 9px 26px;
+    }
+    .who__card > div img{
+        height: 40%;
+    }
+    .who__card > div p{
+        font-size: 14px;
+    }
+    .who__center {
+        transform: translateY(0%);
+    }
+    .who__desc {
+        font-size: 19px;
+        line-height: 26px;
+    }
+}
+@media only screen and (max-width:768px){
+    .who__history--container{
+        flex-direction: column;
+    }
+    .who__hleft {
+        order: 1;
+        padding-top: 20px;
+    }
+    .who__staff::before {
+        transform: scale(0.8);
+    }
+    .who__card {
+        padding: 10px 20px 4px;
+    }
+    .who__bg img {
+        top: -50px;
+        height: 125%;
+    }
+    .who__visual img {
+        width: 450px;
+        transform: scale(0.9);
+    }
+    .who__visual::before {
+        top: -2px;
+        left: 0px;
+        transform: scale(0.8);
+    }
+    .who__staff::before {
+        top: -85px;
+    }
+    .who__text p {
+        font-size: 16px;
+    }
+    .who__text h3 {
+        font-size: 20px;
+        line-height: 46px;
+    }
+    .who__text {
+        padding-left: 60px;
+    }
+    .who__circler--bg {
+        transform-origin: right;
+        transform: scale(0.8);
+    }
+    .who__circler {
+        transform-origin: right;
+        transform: scale(0.8);
+    }
+    .who__board {
+        flex-direction: column;
+    }
+    .who__hero {
+        width: 100%;
+    }
+}
 
-  }
-  @-webkit-keyframes circle {
-    from {
-      -webkit-transform: rotateZ(0deg)
+@media only screen and (max-width:768px){
+    .who__card > div{
+        width: 33%;
+    } 
+    .who__circler--bg {
+       
+        transform: scale(0.6);
     }
-    to {
-      -webkit-transform: rotateZ(360deg)
+    .who__circler {
+       
+        transform: scale(0.6);
     }
-  }
-  @-webkit-keyframes ccircle {
-    from {
-      -webkit-transform: rotateZ(360deg)
+    .who__hleft {
+        padding-right: 0;
     }
-    to {
-      -webkit-transform: rotateZ(0deg)
+}
+@media only screen and (max-width:625px){
+    .who__card {
+        width: 79%;
+        padding: 10px 0px 4px;
+    } 
+    .who__history--container {
+        padding-bottom: 50px;
     }
-  }
+    
+}
+@media only screen and (max-width:530px){
+    .who__circler--bg {
+       
+        transform: scale(0.4);
+    }
+    .who__circler {
+       
+        transform: scale(0.4);
+    } 
+    .who__card > div p {
+        font-size: 12px;
+    }
+    .who__card > div img {
+        height: 30%;
+    }
+    .who__desc {
+        font-size: 16px;
+    }
+    .who__visual img {
+        width: 357px;
+    }
+    .who__visual::before {
+        transform: scale(0.6);
+    }
+    .who__staff img {
+        height: 250px;
+    }
+    .who__staff::before {
+        top: -60px;
+    }
+    .who__text {
+        padding-left: 28px;
+    }
+    .who__row {
+        padding: 28px 31px;
+    }
+}
+@media only screen and (max-width:530px){
+    .who__container {
+       
+        transform: translateY(-195px);
+    }
+    .who__row {
+        padding-right: 0;
+    }
+    .who__desc {
+        font-size: 13px;
+    }
+    .who__circle--bg {
+        height: 522px;
+    }
+}
+@media only screen and (max-width:425px){
+    .who__text p {
+        font-size: 14px;
+    }
+    .who__bg img {
+        height: 116%;
+    }
+    .who__history {
+        margin-top: 110px;
+    }
+    .who__desc {
+        padding-left: 0;
+    }
+    .who__hleft p {
+        font-size: 14px;
+    }
+    .who__hero p {
+        font-size: 14px;
+    }
+    .who__hero h2 {
+        font-size: 16px;
+    }
+    
+}
+@media only screen and (max-width:390px){
+    .who__desc {
+        font-size: 11px;
+    }
+    .who__hleft h3::after {
+        width: 190px;
+    }
+    .who__hleft h3 {
+        font-size: 30px;
+    }
+    .who__circle--bg {
+        height: 427px;
+    }
+    .who__visual img {
+        width: 314px;
+    }
+    .who__card {
+        width: 100%;
+    }
+    .who__container--main {
+        padding-bottom: 20px;
+    }
+    .who__hero p {
+        padding-bottom: 10px;
+    }
+}@media only screen and (max-width:345px){
+    .who__desc {
+        font-size: 9px;
+    }
+    .who__visual img {
+        width: 300px;
+    }
+    .who__text h5 {
+        font-size: 16px;
+    }
+}
