--- a/app/assets/styles/modules/_work.css
+++ b/app/assets/styles/modules/_work.css
@@ -1,23 +1,49 @@
 .work{
     position: relative;
-    /* background: #FFF7F5; */
+    padding-left: 60px;
+
+    &__ellipse  {
+        position: absolute;
+        right: 47%;
+        width: 4%;
+        top: 120px;
+        z-index: 0;        
+    }
+    &__poly {
+        position: absolute;
+        right: 24%;
+        width: 9%;
+        top: 60px;
+        z-index: 0;        
+    }
+    &__ccl {
+        position: absolute;
+        right: 47%;
+        width: 5%;
+        top: -60px;
+        z-index: 0;        
+    }
     
     &__bg{
         position: absolute;
         right: 0;
-        width: 13%;
+        width: 18%;
         top: 24px;
         z-index: 0;
     }
 
     &__container{
         padding: 32px 0;
+        /* position: relative; */
 
+        &--main {
+            position: relative;
+        }
         & p {
             font-family: Sofia Pro;
             font-style: normal;
             font-weight: 300;
-            font-size: 18px;
+            font-size: 16px;
             line-height: 36px;
             color: #333333; 
             width:65%;
@@ -34,7 +60,7 @@
         font-style: normal;
         font-weight: bold;
         font-size: 45px;
-        line-height: 70px;
+        line-height: 55px;
         color: #FB5A1E;        
 
 
@@ -42,8 +68,8 @@
 
     &__board {
         display: flex;
-        padding: 20px 30px 40px 80px;
-        margin-bottom: 60px;
+        padding: 20px 30px 0px 130px;
+        /* position: relative; */
         
         &:nth-of-type(even){
             padding: 80px 30px 40px 100px;
@@ -61,17 +87,17 @@
         & img.work__base {
             position: absolute;
             z-index:-1;
-            height:89%;
+            height:50%;
         }
         &:nth-of-type(odd) img.work__base {
             
-            transform:translateY(-200px)
+            transform:translateY(-133px)
             
         }
         &:nth-of-type(even) img.work__base {
             
-            transform:translateY(-130px);
-            height: 112%;
+            transform:translateY(-116px);
+            height: 118%;
             
         }
         &:nth-of-type(odd) .work__desc {
@@ -95,11 +121,11 @@
 
     &__visual {
         /* width: 800px; */
-        height: 500px;
+        height: 462px;
     
         
         & img {
-            height: 90%;
+            height: 100%;
            
         }
     }
@@ -150,8 +176,137 @@
     }
 }
 
-@media only screen and (max-width: 640px){
-    .work__content{
+@media only screen and (max-width: 1146px){
+    .work__board:nth-of-type(even) img.work__base{
+        height: 106%;
+        transform: translateY(-90px);
+    }
+    .work {
+        padding-left: 0px;
+    }
+    .work__board {
+        padding-left: 44px;
+    }
+    .work__visual {
+        height: 354px;
+    }
+    .work__board img.work__base {
+        height: 46%;
+    } 
+    .work__board:nth-of-type(even) {
+        padding-left: 30px;
+    }
+    .work__img-bg-top {
+        height: 90%;
+    }
+    .work__container p {
+        line-height: 30px;
+    }
+
+}
+
+@media only screen and (max-width: 1021px){
+    .work__visual{
+        height: 265px;
+    }
+    .work__board:nth-of-type(even) {
+        padding-top: 40px;
+    }
+    .work__board:nth-of-type(even) img.work__base {
+        height: 80%;
+        transform: translateY(-60px); 
+    }
+    .work__board{
+        padding-top: 0px;
+        padding-bottom: 21px;
+    }
+    .work__container{
+        padding:0;
+    }
+    .work__ellipse {
+        right: 36%;
+        top: 77px;
+    }
+    .work__poly {
+        right: 19%;
+        top: 32px;
+    }
+}
+
+@media only screen and (max-width: 860px){
+    .work__board:nth-of-type(even) img.work__base {
+        height: 86%;
+    }
+    .work__container p {
+        line-height: 24px;
+        font-size: 14px;
+    }
+    
+}
+@media only screen and (max-width: 768px){
+    .work__board {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 20px;
+    }
+    .work__board:nth-of-type(odd) .work__desc {
+        order: 0;
+    }
+    .work__board img.work__base {
+        height: 36%;
+    }
+    .work__board:nth-of-type(even) img.work__base {
+        height: 55%;
+    }
+    .work__title {
+        font-size: 36px;
+    }
+    .work__desc {
+        padding: 20px 0px;
+    }
+}
+
+@media only screen and (max-width: 512px){
+    img.work__base {
+        display: none;
+    }
+    .work__title {
+        font-size: 30px;
+    }
+    .work__img-bg-top {
+        height: 57%;
+    }
+
+    .work__container p {
         width: 100%;
+    }
+    .work__ellipse {
+        right: 29%;
+        top: 63px;
+        width: 3%;
+    }
+}
+@media only screen and (max-width: 440px){
+    .work__title {
+        font-size: 20px;
+        line-height: 32px;
+    }
+    .work__desc {
+        padding: 0px;
+    }
+
+}
+@media only screen and (max-width: 372px){
+    .work__img-bg-top {
+        height: 40%;
+    }
+    .work__visual {
+        height: 222px;
+    }
+    .work__desc .title {
+        font-size: 1.6rem;
+    }
+    .work__board {
+        padding-left: 28px;
     }
 }
